Agregando buscardor de tareas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Tareas</string>
     <string name="etTask">Agrega la tarea</string>
-    <string name="btnAdd">Guarda Tarea</string>
+    <string name="btnAdd">Guarda tarea</string>
     <string name="btnBack">Regresar</string>
+    <string name="etSearch">Buscar tarea</string>
 </resources>
